--- a/style.css
+++ b/style.css
@@ -5,25 +5,27 @@
 }
 
 body {
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 main {
+    height: 90%;
+    padding: 10px 2px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     max-width: 80%;
     gap: 10px;
+    border: 2px solid orange;
 }
 
 section {
   border: 3px solid gray;
   border-radius: 10px;
   display: flex;
-  flex-basis: 250px;
+  flex-basis: 240px;
   flex-grow: 1;
   flex-direction: column;
 }
@@ -41,12 +43,13 @@ h2 {
 }
 
 h3 {
-  margin: 20px;
+  margin: 12px;
   color: #fff;
   background-color: green;
   padding: 3px;
   border-radius: 4px;
 }
+
 .salario {
     display: flex;
     align-items: center;
